--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,10 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    uses: mattnotmitt/doxygen-action@v1
-    with:
-        working-directory: '.'
-        doxyfile-path: './doxygen.conf'
+    - uses: actions/checkout@v2
+
+    - name: Doxygen Build
+      uses: mattnotmitt/doxygen-action@v1
+      with:
+          working-directory: '.'
+          doxyfile-path: './doxygen.conf'
