--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: html # The folder the action should deploy.
           TARGET_FOLDER: master
-          REPOSITORY_NAME: ${{ github.actor }}/doxygen
+          REPOSITORY_NAME: test-sakura-editor/doxygen
