--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: html # The folder the action should deploy.
-          TARGET_FOLDER: sakuramaster
+          TARGET_FOLDER: sakura-master
           REPOSITORY_NAME: test-sakura-editor/doxygen
