Deploy doxygen repo を追加 https://github.com/JamesIves/github-pages-deploy-action/issues/253#issuecomment-616195742

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,19 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Checkout doxygen repo
+      uses: actions/checkout@v2
+      with:
+        repository: test-sakura-editor/doxygen
+        path: doxygen
+
     - name: Doxygen Build
       uses: mattnotmitt/doxygen-action@v1
       with:
           working-directory: '.'
           doxyfile-path: './doxygen.conf'
 
-    - name: Deploy doxygen
+    - name: Deploy doxygen sakura
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
@@ -35,3 +41,11 @@ jobs:
           FOLDER: html # The folder the action should deploy.
           TARGET_FOLDER: doxygen/master
 
+    - name: Deploy doxygen repo
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: html # The folder the action should deploy.
+          TARGET_FOLDER: master
+          REPOSITORY_NAME: test-sakura-editor/doxygen
