--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,4 @@ jobs:
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: html # The folder the action should deploy.
           TARGET_FOLDER: outout
+          REPOSITORY_NAME: test-sakura-editor/doxygen
