--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,5 +40,5 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: html # The folder the action should deploy.
-          TARGET_FOLDER: outout
-          REPOSITORY_NAME: test-sakura-editor/doxygen
+          TARGET_FOLDER: testdir
+          #REPOSITORY_NAME: test-sakura-editor/doxygen
