--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@v2
+      with:
+          persist-credentials: false
 
     # create tempdata
     - name: create tempdata
@@ -41,4 +43,4 @@ jobs:
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: html # The folder the action should deploy.
           TARGET_FOLDER: testdir
-          #REPOSITORY_NAME: test-sakura-editor/doxygen
+          REPOSITORY_NAME: test-sakura-editor/doxygen
