--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,6 @@ jobs:
       with:
           persist-credentials: false
 
-    # create tempdata
-    - name: create tempdata
-      run: |
-        mkdir -p outout/temp
-        date >   outout/out.txt
-        date >   outout/temp/out.txt
-
     - name: Doxygen Build
       uses: mattnotmitt/doxygen-action@v1
       with:
@@ -44,3 +37,30 @@ jobs:
           FOLDER: html # The folder the action should deploy.
           TARGET_FOLDER: testdir
           REPOSITORY_NAME: test-sakura-editor/doxygen
+
+    - name: Deploy sakura help
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: help/sakura/res # The folder the action should deploy.
+          TARGET_FOLDER: help
+          REPOSITORY_NAME: test-sakura-editor/test-sakura-editor.github.io
+
+    - name: Deploy plugin help
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: help/plugin/Text # The folder the action should deploy.
+          TARGET_FOLDER: plugin
+          REPOSITORY_NAME: test-sakura-editor/test-sakura-editor.github.io
+
+    - name: Deploy macro help
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: help/macro/source # The folder the action should deploy.
+          TARGET_FOLDER: macro
+          REPOSITORY_NAME: test-sakura-editor/test-sakura-editor.github.io
