doxygen をコメントアウト

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,14 +38,14 @@ jobs:
           TARGET_FOLDER: help
           REPOSITORY_NAME: test-sakura-editor/test-sakura-editor.github.io
 
-    - name: Deploy doxygen
-      uses: JamesIves/github-pages-deploy-action@releases/v3
-      with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: html # The folder the action should deploy.
-          TARGET_FOLDER: testdir
-          REPOSITORY_NAME: test-sakura-editor/doxygen
+    # - name: Deploy doxygen
+    #   uses: JamesIves/github-pages-deploy-action@releases/v3
+    #   with:
+    #       ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+    #       BRANCH: gh-pages # The branch the action should deploy to.
+    #       FOLDER: html # The folder the action should deploy.
+    #       TARGET_FOLDER: testdir
+    #       REPOSITORY_NAME: test-sakura-editor/doxygen
 
     - name: Deploy plugin help
       uses: JamesIves/github-pages-deploy-action@releases/v3
