--- a/.github/workflows/macro.yml
+++ b/.github/workflows/macro.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI-doxygen-sakura
+name: sakura macro
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
