--- a/.github/workflows/sakura-build.yml
+++ b/.github/workflows/sakura-build.yml
@@ -24,7 +24,7 @@ jobs:
       run: set
       shell: cmd
 
-    - uses: franzdiebold@github-env-vars-action@v1.0.0
+    - uses: franzdiebold/github-env-vars-action@v1.0.0
 
     - name: Print environment variables
       run: |
