--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -36,4 +36,4 @@ jobs:
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: html # The folder the action should deploy.
           TARGET_FOLDER: testdir
-          REPOSITORY_NAME: test-sakura-editor/doxygen
+          REPOSITORY_NAME: ${{ github.repository_owner }}/doxygen
