--- a/.github/workflows/help.yml
+++ b/.github/workflows/help.yml
@@ -30,4 +30,4 @@ jobs:
           BRANCH: master # The branch the action should deploy to.
           FOLDER: help/sakura/res # The folder the action should deploy.
           TARGET_FOLDER: help
-          REPOSITORY_NAME: test-sakura-editor/test-sakura-editor.github.io
+          REPOSITORY_NAME: ${{ github.repository_owner }}/test-sakura-editor.github.io
