--- a/.github/workflows/sakura-build.yml
+++ b/.github/workflows/sakura-build.yml
@@ -24,9 +24,11 @@ jobs:
       run: set
       shell: cmd
 
-    - name: Setup MSBuild.exe
-      uses: warrenbuckley/Setup-MSBuild@v1
-
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.0.0
+      with:
+          vs-version: [16.4,16.5]
+      
     - name: MSBuild
       run: msbuild sakura.sln
       shell: cmd
