--- a/.github/workflows/sakura-build.yml
+++ b/.github/workflows/sakura-build.yml
@@ -45,4 +45,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: exe ${{ matrix.platform }} ${{ matrix.config }}
-        path: sakura*.zip
+        path: ./sakura-**.zip
