--- a/.github/workflows/sakura-build.yml
+++ b/.github/workflows/sakura-build.yml
@@ -53,4 +53,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: exe ${{ matrix.platform }} ${{ matrix.config }}
-        path: ${{ github.workspace }}/**/*.zip
+        path: ${{ github.workspace }}/*.zip
