--- a/.github/workflows/sakura-build.yml
+++ b/.github/workflows/sakura-build.yml
@@ -25,8 +25,12 @@ jobs:
 
     strategy:
       matrix:
-        config: ["Debug", "Release"]    
-        platform: ["Win32", "x64"]    
+        config:
+          - Debug
+          - Release
+        platform:
+          - Win32
+          - x64
 
     steps:
     - uses: actions/checkout@v1
