--- a/.github/workflows/sakura-build.yml
+++ b/.github/workflows/sakura-build.yml
@@ -59,4 +59,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: exe ${{ matrix.platform }} ${{ matrix.config }}
-        path: *.zip
+        path: '*.zip'
