--- a/.github/workflows/build-sakura.yml
+++ b/.github/workflows/build-sakura.yml
@@ -7,12 +7,30 @@ on:
     branches:
       - master
       - feature/*
+    paths-ignore:
+      - '*.md'
+      - .gitignore
+      - .editorconfig
+      - appveyor.yml
+      - 'azure-pipelines*.yml'
+      - 'ci/azure-pipelines/template*.yml'
+      - '.github/*.md'
+      - '.github/ISSUE_TEMPLATE/*.md'
 
   pull_request:
     branches:
       - master
       - feature/*
       - release/*
+    paths-ignore:
+      - '*.md'
+      - .gitignore
+      - .editorconfig
+      - appveyor.yml
+      - 'azure-pipelines*.yml'
+      - 'ci/azure-pipelines/template*.yml'
+      - '.github/*.md'
+      - '.github/ISSUE_TEMPLATE/*.md'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
