--- a/ci/azure-pipelines/template.job.doxygen.yml
+++ b/ci/azure-pipelines/template.job.doxygen.yml
@@ -1,3 +1,5 @@
+# test
+
 # see https://docs.microsoft.com/en-us/azure/devops/pipelines/process/templates?view=azure-devops&viewFallbackFrom=vsts#passing-parameters
 parameters:
   name: ''
