--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -4,9 +4,16 @@ name: clang-tidy
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - feature/*
+
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - feature/*
+      - release/*
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
